2008-08-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scintilla/Makefile.am:
   Remove non-portable compiler optimisation '-Os'.
 * configure.in:
   Don't use AC_CHECK_PROG() to check for a C++ compiler as it
   breaks compatibility with suncc (reported by Andras Barna, thanks).


2008-08-17  Enrico Tröger  <Enrico Tröger@localhost>

 * geany.nsi:
   Put geany.exe into a 'bin' subdirectory as well as the included
   GTK runtime environment to fix current hardcoded 'bin' values
   in GTK (see http://bugzilla.gnome.org/show_bug.cgi?id=542803).
   Fix missing snippets.conf in the Windows installers.
   Fix missing python.tags in the Windows installers.


2008-08-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Don't look up "scroll_arrow_hlength" and "scroll_arrow_vlength"
   GtkWidget properties on GTK < 2.10.
 * src/prefs.h, src/plugindata.h, src/plugins.c:
   Rename api_version GEANY_API_VERSION.
   Rename abi_version GEANY_ABI_VERSION.
   Use enums for each of these so they can be used to initialize a
   global variable, and add dox.
 * src/editor.c, doc/geany.txt, doc/geany.html:
   Make Ctrl-click on a word perform Go to Tag Definition (this
   shouldn't conflict with column editing as this uses
   Ctrl-Shift-click).


2008-08-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html:
   Add middle-click document closing to the Tips and Tricks appendix.
 * src/makefile.win32:
   Expect GTK 2.10 libs to link against by default and remove GTK210
   flag. If anyone wants to build on Windows against GTK 2.6 or 2.8
   use 'make GTK280=1'.
 * src/support.c:
   Replace fprintf() with g_critical().
 * src/log.c, src/win32.c:
   Fix logging of messages in the debug window on Windows.
   When '--debug' option is given on Windows, set the
   G_SPAWN_WIN32_DEBUG flag for more debug info for spawned processes.
 * src/log.c, src/main.c: